@@ -74,6 +74,7 @@ CHANGELOG Roundcube Webmail
 - Fix redundant keep-alive/refresh after session error on compose page (#5500)
 - Managesieve: Fix handling of scripts with nested rules (#5540)
 - Fix variable substitution in ldap host for some use-cases, e.g. new_user_identity (#5544)
+- Enigma: Fix PHP fatal error when decrypting a message with invalid signature (#5555)
 
 RELEASE 1.2.3
 -------------
